# midi_to_console

./: .gitignore  Cargo.toml  LICENSE  README.md
debian/: service
src/: device_file.rs  logging.rs  main.rs  midi.rs  nscontroller.rs  threads.rs
tools/: create_gadget_device.sh
